--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -45,8 +45,8 @@ spec:
                   with open('/argo/outputs/supplier-output.txt', 'w') as f:
                       for supplier in suppliers:
                           output = f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}\n"
-                          print("output")
-                          f.write(output)
+                          print(output)
+                          # f.write(output)
               except requests.exceptions.RequestException as e:
                   print(f"HTTP error occurred: {e}")
               except ValueError as e:
