--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -16,7 +16,7 @@ spec:
     - name: fetch-supplier-data-pipeline
       script:
         image: python:3.8-slim
-        command: ["/bin/bash", "-c"]
+        command: ["sh", "-c"]
         source: |
           set -e  # Exit immediately if a command exits with a non-zero status
           mkdir -p /argo/outputs
