--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -54,12 +54,12 @@ spec:
         
                   # Display supplier data
                   print("Supplier Data:")
-                  with open('/argo/outputs/supplier-output.txt', 'w') as f:
-                      for supplier in suppliers:
-                          output = f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}\n"
-                          print(output)
-                          f.write(output)
-                  print("Data written to /argo/outputs/supplier-output.txt.")
+                  # with open('/argo/outputs/supplier-output.txt', 'w') as f:
+                  #     for supplier in suppliers:
+                  #         output = f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}\n"
+                  #         print(output)
+                  #         f.write(output)
+                  print("Hello World")
                   
               except requests.exceptions.RequestException as e:
                   print(f"HTTP error occurred: {e}")
