--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -18,7 +18,7 @@ spec:
         image: python:3.8-slim
         command: ["sh", "-c"]
         source: |
-          # set -e  # Exit immediately if a command exits with a non-zero status
+          set -e  # Exit immediately if a command exits with a non-zero status
           # echo "Current directory and contents:"
           # pwd
           # ls -l
@@ -34,11 +34,11 @@ spec:
           # echo "Running Python script..."
           # python - <<EOF
           # import os
-          # import requests
+          import requests
 
           def fetch_suppliers():
-              os.makedirs('/argo/outputs', exist_ok=True)
-              print("Directory /argo/outputs confirmed to exist.")
+              # os.makedirs('/argo/outputs', exist_ok=True)
+              # print("Directory /argo/outputs confirmed to exist.")
               
               # OData Service URL
               url = "https://services.odata.org/northwind/northwind.svc/Suppliers?$format=json"
@@ -54,11 +54,11 @@ spec:
         
                   # Display supplier data
                   print("Supplier Data:")
-                  # with open('/argo/outputs/supplier-output.txt', 'w') as f:
-                  #     for supplier in suppliers:
-                  #         output = f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}\n"
-                  #         print(output)
-                  #         f.write(output)
+                  with open('/argo/outputs/supplier-output.txt', 'w') as f:
+                      for supplier in suppliers:
+                          # output = f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}\n"
+                          print(output)
+                          f.write(output)
                   print("Hello World")
                   
               except requests.exceptions.RequestException as e:
@@ -72,7 +72,7 @@ spec:
                   
         if __name__ == "__main__":
             fetch_suppliers()
-          EOF
+          # EOF
           # echo "Python script finished."
 
           # # Debugging step: List contents of /argo/outputs directory
