--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -19,46 +19,46 @@ spec:
         command: ["sh", "-c"]
         source: |
           set -e  # Exit immediately if a command exits with a non-zero status
-          # echo "Current directory and contents:"
-          # pwd
-          # ls -l
+          echo "Current directory and contents:"
+          pwd
+          ls -l
           
-          # echo "Creating /argo/outputs directory..."
-          # mkdir -p /argo/outputs
-          # chmod 777 /argo/outputs
-          # echo "Directory /argo/outputs created and permissions set."
-          # echo "Installing requests library..."
+          echo "Creating /argo/outputs directory..."
+          mkdir -p /argo/outputs
+          chmod 777 /argo/outputs
+          echo "Directory /argo/outputs created and permissions set."
+          echo "Installing requests library..."
           pip install requests && python - <<EOF
-          # echo "requests library installed."
+          echo "requests library installed."
           
-          # echo "Running Python script..."
-          # python - <<EOF
-          # import os
+          echo "Running Python script..."
+          python - <<EOF
+          import os
           import requests
 
-          # def fetch_suppliers():
-          #     # os.makedirs('/argo/outputs', exist_ok=True)
-          #     # print("Directory /argo/outputs confirmed to exist.")
+          def fetch_suppliers():
+              # os.makedirs('/argo/outputs', exist_ok=True)
+              # print("Directory /argo/outputs confirmed to exist.")
               
-          #     # OData Service URL
-          #     url = "https://services.odata.org/northwind/northwind.svc/Suppliers?$format=json"
+              # OData Service URL
+              url = "https://services.odata.org/northwind/northwind.svc/Suppliers?$format=json"
     
-          #     try:
-          #         # Send GET request to fetch supplier data
-          #         response = requests.get(url)
-          #         response.raise_for_status()  # Raise an error for HTTP errors
+              try:
+                  # Send GET request to fetch supplier data
+                  response = requests.get(url)
+                  response.raise_for_status()  # Raise an error for HTTP errors
         
-          #         # Parse JSON response
-          #         data = response.json()
-          #         suppliers = data.get("value", [])
+                  # Parse JSON response
+                  data = response.json()
+                  suppliers = data.get("value", [])
         
-          #         # Display supplier data
-          #         print("Supplier Data:")
-          #         with open('/argo/outputs/supplier-output.txt', 'w') as f:
-          #             for supplier in suppliers:
-          #                 # output = f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}\n"
-          #                 print(output)
-          #                 f.write(output)
+                  # Display supplier data
+                  print("Supplier Data:")
+                  with open('/argo/outputs/supplier-output.txt', 'w') as f:
+                      for supplier in suppliers:
+                          # output = f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}\n"
+                          print(output)
+                          f.write(output)
                   print("Hello World")
                   
               except requests.exceptions.RequestException as e:
