--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -92,6 +92,6 @@ spec:
 
       outputs:
         parameters:
-          - name: supplier-output
+          - name: requirements
             valueFrom:
               path: /argo/outputs/requirements.txt
